# fily

./: Cargo.toml  README.md
.github/: dependabot.yml
fily_lib/: Cargo.toml
fily_lib/src/: fily_err.rs  lib.rs  tests.rs
fily_lib/src/check_image_formats/: mod.rs
fily_lib/src/delete/: mod.rs
fily_lib/src/duplicates/: mod.rs
fily_lib/src/find/: condition.rs  condition_try_from.rs  find_options.rs  mod.rs  search_criteria.rs
fily_lib/src/move_files/: mod.rs
fily_lib/src/operations/: mod.rs
fily_lib/src/operations/check_image_formats/: mod.rs
fily_lib/src/operations/duplicates/: mod.rs
fily_lib/src/operations/find/: condition.rs  condition_try_from.rs  find_options.rs  mod.rs  search_criteria.rs
fily_lib/src/operations/move_files/: mod.rs
fily_lib/src/operations/rename/: mod.rs  parser.rs  tokenizer.rs
fily_lib/src/operations/similar_images/: mod.rs
fily_lib/src/rename/: mod.rs  parser.rs  tokenizer.rs
fily_lib/src/similar_images/: mod.rs
src/: cli_options.rs  main.rs
