[package]
name = "fily"
version = "0.1.0"
authors = ["nnt0"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/nnt0/fily/"
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fily_lib = { path = "fily_lib" }
clap = "2.33.2"
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.15"
regex = "1.4.3"

[profile.release]
lto = true
debug = true
codegen-units = 1