[package]
name = "fily_lib"
version = "0.1.0"
authors = ["nnt0"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/nnt0/fily/fily_lib/"
readme = "../README.md"
categories = ["filesystem"]
keywords = ["files"]
description = "Provides functions that do stuff with files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
regex = "1.3.9"
logos = "0.11.4"
walkdir = "2.3.1"
# dialoguer = "0.6.2"
img_hash = "3.1.0"
image = "0.23.9"
crc32fast = "1.2.0"
filetime = "0.2.12"
rayon = "1.4.1"
thiserror = "1.0.21"