[package]
name = "fily_lib"
version = "0.1.0"
authors = ["nnt0"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/nnt0/fily/fily_lib/"
readme = "../README.md"
categories = ["filesystem"]
keywords = ["files"]
description = "Provides functions that do stuff with files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.11", optional = true }
regex = { version = "1.4.2", optional = true }
logos = { version = "0.11.4", optional = true }
walkdir = { version = "2.3.1", optional = true }
img_hash = { version = "3.1.0", optional = true }
image = { version = "0.23.11", optional = true }
crc32fast = { version = "1.2.1", optional = true }
filetime = { version = "0.2.13", optional = true }
thiserror = { version = "1.0.22", optional = true }

[features]
default = ["check_image_formats", "duplicates", "find", "move_files", "rename", "similar_images"]
check_image_formats = ["log", "image"]
duplicates = ["log", "crc32fast"]
find = ["log", "thiserror", "walkdir", "regex", "filetime"]
move_files = ["log", "thiserror"]
rename = ["log", "logos", "thiserror"]
similar_images = ["log", "img_hash", "image"]