[package]
name = "fily_lib"
version = "0.1.0"
authors = ["nnt0"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/nnt0/fily/fily_lib/"
readme = "../README.md"
categories = ["filesystem"]
keywords = ["files"]
description = "Provides functions that do stuff with files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14", optional = true }
regex = { version = "1.5.4", optional = true }
logos = { version = "0.12.0", optional = true }
walkdir = { version = "2.3.2", optional = true }
img_hash = { version = "3.2.0", optional = true }
image = { version = "0.24.5", optional = true }
crc32fast = { version = "1.2.1", optional = true }
filetime = { version = "0.2.15", optional = true }

[features]
default = ["check_image_formats", "delete", "duplicates", "find", "move_files", "rename", "similar_images"]
check_image_formats = ["log", "image"]
delete = ["log"]
duplicates = ["log", "crc32fast"]
find = ["log", "walkdir", "regex", "filetime"]
move_files = ["log"]
rename = ["log", "logos"]
similar_images = ["log", "img_hash", "image"]